# LARA

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SPEC.md  docker-compose.yml
backend/: .coverage  .dockerignore  Dockerfile  conftest.py  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  limiter.py  main.py  security.py  utils.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py  health.py  interactions.py  samples.py  session.py  upload.py
backend/app/samples/: manifest.json
backend/app/samples/leaflets/: atorvastatin.json  carvedilol.json  digoxin.json  furosemide.json  levothyroxine.json  sertraline.json  spironolactone.json  warfarin.json  zolpidem.json
backend/app/services/: chunker.py  circuit_breaker.py  dailymed.py  drug_extractor.py  embedder.py  ingestion.py  ingestion_queue.py  input_classifier.py  interaction_detector.py  llm_client.py  pdf_parser.py  prescription_parser.py  rag_pipeline.py  reranker.py  samples.py  session_store.py  vector_store.py
backend/scripts/: generate_sample_fixtures.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_route.py  test_chat_stream_route.py  test_health_session.py  test_interactions_route.py  test_metrics.py  test_redis_503.py  test_request_id.py  test_samples_route.py  test_upload_route.py
backend/tests/unit/: test_chunker.py  test_circuit_breaker.py  test_config.py  test_dailymed.py  test_dependencies.py  test_drug_extractor.py  test_embedder.py  test_embedder_mocked.py  test_eviction.py  test_health.py  test_ingestion_queue.py  test_input_classifier.py  test_interaction_detector.py  test_llm_client.py  test_pdf_parser.py  test_prescription_parser.py  test_rag_pipeline.py  test_rag_pipeline_offline.py  test_rate_limiting.py  test_reranker.py  test_sample_seeding.py  test_security.py  test_session_store.py  test_vector_store.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  (+2 more)
(+9 files in other folders)
