[project]
name = "lara-backend"
version = "0.1.0"
description = "LARA — Leaflet Assistant RAG Application backend"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "tenacity>=8.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "groq>=0.9",
    "gunicorn>=21.2",
    "python-json-logger>=2.0",
    "redis[asyncio]>=5.0",
    "slowapi>=0.1.9",
    "limits>=3.0",
    "spacy>=3.7",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "prometheus-fastapi-instrumentator>=0.14.0",
    "prometheus-client>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "anyio>=4.4",
    "taskipy>=1.13",
    "ruff>=0.4",
    "httpx>=0.27",
    "fakeredis>=2.0",
]

[tool.taskipy.tasks]
dev       = "uvicorn app.main:app --reload --port 8000"
test      = "pytest"
test-v    = "pytest -v"
lint      = "ruff check app tests"
fmt       = "ruff format app tests"
fmt-check = "ruff format --check app tests"
check     = "task fmt-check && task lint && task test"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
